--- a/barcos.html
+++ b/barcos.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barcos</title>
-    <link rel="stylesheet" href="scss/dist/custom.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="scss/dist/custom.css">
 </head>
 
 <body class="bg-white">
@@ -43,113 +43,7 @@
     <main class="py-4">
         <h1 class="text-dark text-center">Conoce a nuestra flota</h1>
         <br>
-
-        <div class="container">
-            <div class="row featurette">
-                <div class="col-md-7 text-end">
-                    <h3 class="featurette-heading">Aurora Sea. <span class="text-ocean">Lujo en cada ola.</span></h3>
-                    <p class="lead">
-                        <strong>Capitán:</strong> Elena Morales<br>
-                        <strong>Capacidad:</strong> 3,200 pasajeros<br>
-                        <strong>Suites:</strong> 150 de lujo con vista al mar<br>
-                        <strong>Áreas de recreación:</strong> Spa, piscina infinita, teatro, casino<br>
-                        <strong>Modelo:</strong> Oceanliner Class X<br>
-                    </p>
-                </div>
-                <div class="col-md-5">
-                    <img src="https://cdn-3.expansion.mx/dims4/default/e771a6a/2147483647/strip/true/crop/5995x4234+0+0/resize/1200x848!/format/webp/quality/60/?url=https%3A%2F%2Fcdn-3.expansion.mx%2Fc1%2Fec%2Fc371673b403a993283b6ff277687%2F1666103786-rci-ic-crowns-edge-cgi23-ret-crop-lr.JPG"
-                        class="img-fluid mx-auto" alt="Aurora Sea">
-                </div>
-                <div class="row-cols-5 text-center">
-                    <button class="btn-ocean btn-lg">Ver destinos dispnibles</button> 
-                    <!--Mejorar boton y agregar a los demás campos inferiores-->
-
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7 order-md-2">
-                    <h3 class="featurette-heading">Estrella del Norte. <span class="text-ocean">Tu guía en el
-                            horizonte.</span></h3>
-                    <p class="lead">
-                        <strong>Capitán:</strong> Jean-Luc Rousseau<br>
-                        <strong>Capacidad:</strong> 4,500 pasajeros<br>
-                        <strong>Suites:</strong> 200 premium<br>
-                        <strong>Áreas de recreación:</strong> Club nocturno, restaurantes gourmet, gimnasio
-                        panorámico<br>
-                        <strong>Modelo:</strong> Arctic Voyager 5000<br>
-                    </p>
-                </div>
-                <div class="col-md-5 order-md-1">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Queen_Mary_2_Boston_July_2015_01_%28cropped%29.jpg"
-                        class="img-fluid mx-auto" alt="Estrella del Norte">
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7 text-end">
-                    <h3 class="featurette-heading">Mar de Cristal. <span class="text-ocean">Serenidad en
-                            movimiento.</span>
-                    </h3>
-                    <p class="lead">
-                        <strong>Capitán:</strong> Rodrigo Sánchez<br>
-                        <strong>Capacidad:</strong> 2,800 pasajeros<br>
-                        <strong>Suites:</strong> 120 panorámicas<br>
-                        <strong>Áreas de recreación:</strong> Parque acuático, cine 4D, centro de yoga<br>
-                        <strong>Modelo:</strong> Serenity 88<br>
-                    </p>
-                </div>
-                <div class="col-md-5">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Icon_of_the_Seas.jpg"
-                        class="img-fluid mx-auto" alt="Mar de Cristal">
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7 order-md-2">
-                    <h3 class="featurette-heading">Titan Horizon. <span class="text-ocean">Donde el poder y la elegancia
-                            se encuentran.</span></h3>
-                    <p class="lead">
-                        <strong>Capitán:</strong> Margaret O'Connell<br>
-                        <strong>Capacidad:</strong> 5,100 pasajeros<br>
-                        <strong>Suites:</strong> 250 executive<br>
-                        <strong>Áreas de recreación:</strong> Simulador de surf, pista de patinaje, centro comercial<br>
-                        <strong>Modelo:</strong> Horizon Max-Class 2025<br>
-                    </p>
-                </div>
-                <div class="col-md-5 order-md-1">
-                    <img src="https://i.blogs.es/d82af3/12/1366_2000.jpeg" class="img-fluid mx-auto"
-                        alt="Titan Horizon">
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7 text-end">
-                    <h3 class="featurette-heading">Velero Celeste. <span class="text-ocean">Una joya clásica del
-                            océano.</span></h3>
-                    <p class="lead">
-                        <strong>Capitán:</strong> Francisco Navarro<br>
-                        <strong>Capacidad:</strong> 1,800 pasajeros<br>
-                        <strong>Suites:</strong> 90 elegantes<br>
-                        <strong>Áreas de recreación:</strong> Biblioteca náutica, piano bar, solárium<br>
-                        <strong>Modelo:</strong> Classic Wind 75<br>
-                    </p>
-                </div>
-                <div class="col-md-5">
-                    <img src="https://royalcaribbean.com.pe/img/barcos/222_imagen_2625.jpg" class="img-fluid mx-auto"
-                        alt="Velero Celeste">
-                </div>
-            </div>
-        </div>
-
+        <div class="container" id="fleet-container"></div>
     </main>
 
     <!--Footer-->
@@ -204,5 +98,105 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
+<script>
+    // 1) Definimos el "array" de barcos:
+    const ships = [
+        {
+            name: "Aurora Sea",
+            tagline: "Lujo en cada ola",
+            captain: "Elena Morales",
+            capacity: "3,200 pasajeros",
+            suites: "150 de lujo con vista al mar",
+            recreation: "Spa, piscina infinita, teatro, casino",
+            model: "Oceanliner Class X",
+            image: "https://cdn-3.expansion.mx/dims4/default/e771a6a/2147483647/strip/true/crop/5995x4234+0+0/resize/1200x848!/format/webp/quality/60/?url=https%3A%2F%2Fcdn-3.expansion.mx%2Fc1%2Fec%2Fc371673b403a993283b6ff277687%2F1666103786-rci-ic-crowns-edge-cgi23-ret-crop-lr.JPG"
+        },
+        {
+            name: "Estrella del Norte",
+            tagline: "Tu guía en el horizonte",
+            captain: "Jean-Luc Rousseau",
+            capacity: "4,500 pasajeros",
+            suites: "200 premium",
+            recreation: "Club nocturno, restaurantes gourmet, gimnasio panorámico",
+            model: "Arctic Voyager 5000",
+            image: "https://upload.wikimedia.org/wikipedia/commons/b/b3/Queen_Mary_2_Boston_July_2015_01_%28cropped%29.jpg"
+        },
+        {
+            name: "Mar de Cristal",
+            tagline: "Serenidad en movimiento",
+            captain: "Rodrigo Sánchez",
+            capacity: "2,800 pasajeros",
+            suites: "120 panorámicas",
+            recreation: "Parque acuático, cine 4D, centro de yoga",
+            model: "Serenity 88",
+            image: "https://upload.wikimedia.org/wikipedia/commons/3/3b/Icon_of_the_Seas.jpg"
+        },
+        {
+            name: "Titan Horizon",
+            tagline: "Donde el poder y la elegancia se encuentran",
+            captain: "Margaret O'Connell",
+            capacity: "5,100 pasajeros",
+            suites: "250 executive",
+            recreation: "Simulador de surf, pista de patinaje, centro comercial",
+            model: "Horizon Max-Class 2025",
+            image: "https://i.blogs.es/d82af3/12/1366_2000.jpeg"
+        },
+        {
+            name: "Velero Celeste",
+            tagline: "Una joya clásica del océano",
+            captain: "Francisco Navarro",
+            capacity: "1,800 pasajeros",
+            suites: "90 elegantes",
+            recreation: "Biblioteca náutica, piano bar, solárium",
+            model: "Classic Wind 75",
+            image: "https://royalcaribbean.com.pe/img/barcos/222_imagen_2625.jpg"
+        }
+    ];
+
+    // 2) Seleccionamos el contenedor y generamos cada bloque:
+    const container = document.getElementById("fleet-container");
+
+    ships.forEach((ship, i) => {
+        // creamos el row.featurette
+        const row = document.createElement("div");
+        row.className = "row featurette";
+
+        // determinamos alternancia de orden y texto
+        const isOdd = i % 2 === 1;
+        const textClass = isOdd ? "order-md-2" : "text-end";
+        const imgClass = isOdd ? "order-md-1" : "";
+
+        // inyectamos el template
+        row.innerHTML = `
+        <div class="col-md-7 ${textClass}">
+          <h3 class="featurette-heading">
+            ${ship.name}. <span class="text-ocean">${ship.tagline}</span>
+          </h3>
+          <p class="lead">
+            <strong>Capitán:</strong> ${ship.captain}<br>
+            <strong>Capacidad:</strong> ${ship.capacity}<br>
+            <strong>Suites:</strong> ${ship.suites}<br>
+            <strong>Áreas de recreación:</strong> ${ship.recreation}<br>
+            <strong>Modelo:</strong> ${ship.model}<br>
+          </p>
+          <a href="paquetes.html" class="btn btn-dark btn-lg mt-3">
+            Ver destinos disponibles
+          </a>
+        </div>
+        <div class="col-md-5 ${imgClass}">
+          <img src="${ship.image}" class="img-fluid mx-auto" alt="${ship.name}">
+        </div>
+      `;
+        container.appendChild(row);
+
+        // agregamos separador si no es el último
+        if (i < ships.length - 1) {
+            const hr = document.createElement("hr");
+            hr.className = "featurette-divider";
+            container.appendChild(hr);
+        }
+    });
+</script>
 
 </html>
