--- a/comprar.html
+++ b/comprar.html
@@ -1,152 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="scss/dist/custom.css">
-    <title>Comprar</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="scss/dist/custom.css">
+  <title>Comprar</title>
 </head>
+
 <body class="bg-white">
-        <!--Header-->
-    <header>
-        <nav class="navbar navbar-expand-lg bg-header">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white" href="main.html">TuCrucerito.com</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toogle-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" 
-                    style="--bs-scroll-height: 100px">
-                        <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page"
-                            href="rutas.html">Destinos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page"
-                            href="paquetes.html">Paquetes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" 
-                            href="barcos.html">Barcos</a>
+  <!--Header-->
+  <header>
+    <nav class="navbar navbar-expand-lg bg-header">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="main.html">TuCrucerito.com</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+          aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toogle-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px">
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="rutas.html">Destinos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="paquetes.html">Paquetes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="barcos.html">Barcos</a>
 
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page"
-                            href="comprar.html">Comprar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="comprar.html">Comprar</a>
 
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <br><br>
-    <!--En proceso:v-->
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="py-4">
+    <h1 class="text-ocean text-center mb-5">Proceso de Reservación</h1>
 
+    <!-- STEPPER -->
     <div class="position-relative m-4 p-5">
-        <div class="position-relative m-4">
-            <div class="progress" role="progressbar" aria-label="Progress" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="height: 1px;">
-              <div class="progress-bar" style="width: 0%"></div>
-            </div>
-            <button type="button" class="position-absolute top-0 start-0 translate-middle btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">1</button>
-            <button type="button" class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-secondary rounded-pill" style="width: 2rem; height:2rem;">2</button>
-            <button type="button" class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill" style="width: 2rem; height:2rem;">3</button>
+      <div class="position-relative m-4">
+        <div class="progress" role="progressbar" aria-label="Progress" aria-valuenow="50" aria-valuemin="0"
+          aria-valuemax="100" style="height: 1px;">
+          <div class="progress-bar" style="width: 0%"></div>
         </div>
+        <button type="button" class="position-absolute top-0 start-0 translate-middle btn btn-sm btn-ocean rounded-pill"
+          style="width: 2rem; height:2rem;">1</button>
+        <button type="button"
+          class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-secondary rounded-pill"
+          style="width: 2rem; height:2rem;">2</button>
+        <button type="button"
+          class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill"
+          style="width: 2rem; height:2rem;">3</button>
+      </div>
     </div>
+    <br><br>
 
-          <br>
-    <h1 class="text-dark text-center">Completa tus datos</h1>
-<br><br>
-
-
-    <!--Formulario de validación de datos-->
-    <form class="row g-3 p-5">
+    <!-- FORMULARIO -->
+    <div class="container">
+      <h2 class="text-dark text-center mb-4">Completa tus datos</h2>
+      <form class="row g-3 needs-validation" novalidate>
+        <!-- Nombre -->
         <div class="col-md-4">
-          <label for="validationDefault01" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="validationDefault01" required>
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="nombre" required>
+          <div class="invalid-feedback">Por favor ingresa tu nombre.</div>
         </div>
+        <!-- Apellido -->
         <div class="col-md-4">
-          <label for="validationDefault02" class="form-label">Apellido</label>
-          <input type="text" class="form-control" id="validationDefault02" required>
+          <label for="apellido" class="form-label">Apellido</label>
+          <input type="text" class="form-control" id="apellido" required>
+          <div class="invalid-feedback">Por favor ingresa tu apellido.</div>
         </div>
+        <!-- Correo -->
         <div class="col-md-4">
-          <label for="validationDefaultUsername" class="form-label">Correo electronico</label>
-          <div class="input-group">
-            <span class="input-group-text" id="inputGroupPrepend2">@</span>
-            <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required>
+          <label for="email" class="form-label">Correo electrónico</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text">@</span>
+            <input type="email" class="form-control" id="email" required>
+            <div class="invalid-feedback">Introduce un correo válido.</div>
           </div>
         </div>
+        <!-- Celular -->
         <div class="col-md-6">
-          <label for="validationDefault03" class="form-label">Número celular</label>
-          <input type="text" class="form-control" id="validationDefault03" required>
+          <label for="celular" class="form-label">Número celular</label>
+          <input type="tel" pattern="[0-9]{9}" class="form-control" id="celular" required>
+          <div class="invalid-feedback">Formato: 9 dígitos numéricos.</div>
         </div>
+        <!-- Ciudad -->
         <div class="col-md-3">
-          <label for="validationDefault04" class="form-label">Ciudad</label>
-          <select class="form-select" id="validationDefault04" required>
-            <option selected disabled value="">Seleccione su ciudad</option>
+          <label for="ciudad" class="form-label">Ciudad</label>
+          <select class="form-select" id="ciudad" required>
+            <option disabled selected value="">Elige tu ciudad</option>
             <option>Lima</option>
             <option>Ica</option>
             <option>Arequipa</option>
-            <option>Ancahs</option>
+            <option>Ancash</option>
             <option>Piura</option>
           </select>
+          <div class="invalid-feedback">Debes seleccionar una ciudad.</div>
         </div>
-        <div class="col-md-3">
-          <label for="validationDefault05" class="form-label">Zip</label>
-          <input type="text" class="form-control" id="validationDefault05" required>
-        </div>
+        <!-- Términos -->
         <div class="col-12">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-            <label class="form-check-label" for="invalidCheck2">
+            <input class="form-check-input" type="checkbox" id="terminos" required>
+            <label class="form-check-label" for="terminos">
               Acepto los términos y condiciones
             </label>
+            <div class="invalid-feedback">Debes aceptar los términos.</div>
           </div>
         </div>
+        <!-- Botón Submit -->
         <div class="col-12 text-center">
-          <button class="btn btn-primary text-center mx-auto" onclick="location.href='elegirruta.html'" type="submit">Enviar</button>
+          <button class="btn btn-ocean text-center mx-auto btn-lg" type="submit">Enviar</button>
         </div>
       </form>
-
-
+    </div>
+    <br><br>
     <!--Footer-->
     <footer class="row row-cols-5 py-5 mt-5  border-top bg-header text-white">
-        <div class="col">
-            <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap" />
-                </svg>
-            </a>
-            <p class="text-white">&copy;2025 TuCrucerito Corp.</p>
-        </div>
+      <div class="col">
+        <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+          <svg class="bi me-2" width="40" height="32">
+            <use xlink:href="#bootstrap" />
+          </svg>
+        </a>
+        <p class="text-white">&copy;2025 TuCrucerito Corp.</p>
+      </div>
 
-        <div class="col">
+      <div class="col">
 
-        </div>
-        <div class="col">
-            <h5>Info</h5>
-            <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Terminos y condiciones</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Más sobre nosotros</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contáctanos</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-            </ul>
-        </div>
+      </div>
+      <div class="col">
+        <h5>Info</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Terminos y condiciones</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Más sobre nosotros</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contáctanos</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+        </ul>
+      </div>
 
-        <div class="col">
-            <h5>Redes sociales</h5>
-            <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="https://www.instagram.com" class="nav-link p-0 text-muted">Instagram</a></li>
-                <li class="nav-item mb-2"><a href="https://www.facebook.com" class="nav-link p-0 text-muted">Facebook</a></li>
-                <li class="nav-item mb-2"><a href="x.com" class="nav-link p-0 text-muted">X</a></li>
-            </ul>
-        </div>
+      <div class="col">
+        <h5>Redes sociales</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="https://www.instagram.com" class="nav-link p-0 text-muted">Instagram</a>
+          </li>
+          <li class="nav-item mb-2"><a href="https://www.facebook.com" class="nav-link p-0 text-muted">Facebook</a></li>
+          <li class="nav-item mb-2"><a href="x.com" class="nav-link p-0 text-muted">X</a></li>
+        </ul>
+      </div>
     </footer>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+<script>
+  (function () {
+    'use strict'
+    const forms = document.querySelectorAll('.needs-validation')
+    Array.from(forms).forEach(form => {
+      form.addEventListener('submit', event => {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        } else {
+          // prevención sólo visual: evitar recarga
+          event.preventDefault()
+          window.location.href = 'elegirruta.html'
+        }
+        form.classList.add('was-validated')
+      }, false)
+    })
+  })()
+</script>
 
 </html>
